# mnistTensorRT

./: CMakeLists.txt  CNN.py  README.md  cnnTensorRT.py  inferece.py  logging.h  main.py  ministCNN.wts  mnistCNN.cpp  mnistCNN.engine  model.pth  model.txt
logs/: events.out.tfevents.1697687489.DESKTOP-0SP6CSO.43860.0  events.out.tfevents.1697687526.DESKTOP-0SP6CSO.36880.0  events.out.tfevents.1697687980.DESKTOP-0SP6CSO.32732.0  events.out.tfevents.1697688132.DESKTOP-0SP6CSO.24884.0  events.out.tfevents.1697688716.DESKTOP-0SP6CSO.35888.0  events.out.tfevents.1697688731.DESKTOP-0SP6CSO.40172.0  events.out.tfevents.1697688853.DESKTOP-0SP6CSO.20168.0  events.out.tfevents.1697688876.DESKTOP-0SP6CSO.28792.0  events.out.tfevents.1697689002.DESKTOP-0SP6CSO.39064.0
